<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".RegistroActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/titulo_registro"
            android:textSize="23sp"
            android:textStyle="bold"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_fileName="plataforma.json"
            app:lottie_loop="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombres"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etnombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombres"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_apellidos"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etapellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apellidos"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_correo"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_correo"
                android:inputType="textEmailAddress"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pass"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_pass"
                android:inputType="textPassword"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirmar_password"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etconfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_confirmar_password"
                android:inputType="textPassword"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrar"
            android:layout_marginTop="45dp"
            android:padding="15dp"
            android:drawableEnd="@drawable/code"
            android:layout_marginHorizontal="15dp"/>

        <Button
            android:id="@+id/btnIrLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="35dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/lbl_ir_login"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
