<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageView
            android:id="@+id/ivclientefotoi"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/usuario"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvidclientei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_cliente_item"
                android:visibility="gone"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvuidclientei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uid_cliente"
                android:visibility="gone"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvnombrei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/nombre_cliente_item"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvapellidoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:text="@string/apellido_cliente_item"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvcorreoclientei"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/correo_cliente_item"
                android:visibility="gone"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvdniclientei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dni_cliente_item"
                android:visibility="gone"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvtelefonoclientei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono_cliente_item"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvdireccionclientei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion_cliente_Item"
                android:visibility="gone"
                android:layout_marginTop="5dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>