<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_tarea"
    tools:context=".MisDatos.MisDatosActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo_informatica"/>
        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/user4"
            android:layout_marginTop="170dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
        
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:background="@drawable/bg_body"
        android:orientation="vertical">
        <TextView
            android:id="@+id/obtCorreoMd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/correo_md"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/obtNombreMd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/codigo_md"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/mis_Datos"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_md"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_leyenda"
            android:gravity="center">
            <TextView
                android:id="@+id/etTelefonoMd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/leyenda_md"
                android:padding="5dp"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etnombresMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_md"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etapellidosMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido_md"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etfechaNacimientoMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_nacimiento"
                android:padding="15dp"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etedadMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/edad_md"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/ettelefonoMd"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:hint="@string/telefono_md"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etdomicilioMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domicilio_md"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/etprofesionMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profesion_md"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/ettiktokMd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tiktok_md"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnguardarMd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/code"
        android:gravity="center"
        android:text="@string/guardar_md"
        android:layout_marginTop="45dp"
        android:padding="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="center"
        android:textSize="16dp"/>

</LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>