<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondo3"
    tools:context=".Cliente.AgregarClienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_cli"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/idUsuariocli"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uid_usuario"
            android:textSize="16sp"
            android:gravity="center"/>

        <!-- Animacion -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:lottie_fileName="plataforma.json"
            android:layout_marginTop="10dp"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

        <!-- Campos de Entrada -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp">

            <EditText
                android:id="@+id/etnombrecli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/agregar_usuario"
                android:drawablePadding="10dp"
                android:hint="@string/nombre_cli"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/etapellidoscli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/agregar_usuario"
                android:drawablePadding="10dp"
                android:hint="@string/apellidos_cli"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/etcorreocli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/correo_icon"
                android:drawablePadding="10dp"
                android:hint="@string/correo_cli"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/etdnicli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/dni_icon"
                android:drawablePadding="10dp"
                android:hint="@string/dni_cli"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/ettelefonocli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/telefono_icon"
                android:drawablePadding="10dp"
                android:hint="@string/telefon_cli"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/etdireccioncli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/casa_icon"
                android:drawablePadding="10dp"
                android:hint="@string/direccion_cli"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Boton -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnguardarcliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_md"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            app:cornerRadius="8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
