<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desarrollo"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <!-- Solo una vez el texto de descripción -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono_dev"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:padding="10dp"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/btntelefonodev"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/lista_tareas"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/btnyoutubedev"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/lista_tareas"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/volver"/>

    </LinearLayout>

</ScrollView>
